# lambda

./: README.md  lambda.cabal  stack.yaml
app/: Main.hs
