name:                lambda
version:             0.1
synopsis:            A lambda calculus reducer / evaluator
description:         Please see README.md
homepage:            https://github.com/mattoxbeckman/lambda
license:             BSD3
license-file:        LICENSE
author:              Mattox Beckman
maintainer:          mattox@illinois.edu
copyright:           2017 Mattox Beckman
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable lambda-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , lambda
                     , unordered-containers
                     , parsec
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mattoxbeckman/lambda
